--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -1,9 +1,9 @@
 build:
 	hugo
 
-clean:
-	rm -rf dist/*
-
 post:
 	hugo new posts/$(POST_NAME).md
-	sed -i '2s/.*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
+	sed -i '2s/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
+
+clean:
+	rm -rf dist/*
