--- a/.github/workflows/module3_task0.yml
+++ b/.github/workflows/module3_task0.yml
@@ -8,12 +8,13 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  module3_task0:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-20.04
     steps:
-      - name: Checkout
+      - name: Clone the repository
         uses: actions/checkout@v3
-      - name: cd in to correct directory
+
+      - name: Navigate to project directory
         run: |
-          cd module3_task0
+          cd module3_task0/
           make help
