--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -8,17 +8,19 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  runs-on: ubuntu-18.04
-  steps:
-    - name: Clone the repository
-      uses: actions/checkout@v3
-     - name: Run script to setup Hugo
-      run: |
-        cd module3_task1/
-        ./setup.sh
-      shell: bash
+  module3_task1
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Clone the repository
+        uses: actions/checkout@v3
+      
+      - name: Run script to setup Hugo
+        run: |
+          cd module3_task1/
+          ./setup.sh
+        shell: bash
 
-    - name: Navigate to project directory
-      run: |
+      - name: Navigate to project directory
+        run: |
         cd module3_task1/
         make build
