--- a/.github/workflows/module3_task1.yml
+++ b/.github/workflows/module3_task1.yml
@@ -9,12 +9,12 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  module3_task1
+  module3_task1:
     runs-on: ubuntu-18.04
     steps:
       - name: Clone the repository
         uses: actions/checkout@v3
-      
+
       - name: Run script to setup Hugo
         run: |
           cd module3_task1/
