--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -2,9 +2,7 @@
 name: module3_task2
 on:
   push:
-    branches:
-      - master
-      - main
+    branches: [main, master]
   schedule:
     - cron: "0 0 * * *"
 
