--- a/module3_task2/Makefile
+++ b/module3_task2/Makefile
@@ -1,31 +1,31 @@
 build: ## Builds a website using hugo with current config in config.toml
-	hugo
+	@hugo
 
 post: ## Creates a new post using env vars POST_TITLE and POST_NAME
-	hugo new posts/$(POST_NAME).md
-	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
+	@hugo new posts/$(POST_NAME).md
+	@sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
 clean: ## Removes content from dist directory
-	rm -rf dist/*
+	@rm -rf dist/*
 
 package: ## Creates a zip file containing binary and the dist/ directory
-	make build
-	zip awesome-website.zip dist/index.html
+	@make build
+	@zip awesome-website.zip dist/index.html
 
 unit-tests: ## Tests various make commands
-	make package
-	make clean
+	@make package
+	@make clean
 
 integraion-tests: ## Stats server and checks local host URL
-	hugo
-	ls dist/
+	@hugo
+	@ls dist/
 
 validate: ## Checks current working directory
-	pwd
+	@pwd
 
 lint: ## Lints markdown files
-	markdownlint README.md DEPLOY.md
+	@markdownlint README.md DEPLOY.md
 
 .SILENT:
 help: ## Displays helpful information for Makefile commands
-	cat Makefile | grep '##' | tr -d '##' | head -n -1
+	@cat Makefile | grep '##' | tr -d '##' | head -n -1
