--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -2,7 +2,9 @@
 name: module3_task2
 on:
   push:
-    branches: [main, master]
+    branches:
+      - main
+      - master
   schedule:
     - cron: "0 0 * * *"
 
