--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -38,6 +38,7 @@ jobs:
           make validate
           make integration-tests
           make unit-tests
+          make package
           make clean
 
       - name: Archiving package
