Testing archive build

--- a/.github/workflows/module3_task2.yml
+++ b/.github/workflows/module3_task2.yml
@@ -41,7 +41,7 @@ jobs:
           make package
           make clean
 
-      - name: Archiving package
+      - name: Archive build
         if: ${{ success()}}
         uses: actions/upload-artifact@v3
         with:
