Update to include Release

--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -1,5 +1,5 @@
 ---
-name: module3_task2
+name: module3_task3
 on:
   push:
     branches:
@@ -9,7 +9,7 @@ on:
     - cron: "0 0 * * *"
 
 jobs:
-  module3_task2:
+  module3_task3:
     runs-on: ubuntu-18.04
     steps:
       - name: Clone the repository
@@ -17,23 +17,23 @@ jobs:
 
       - name: Run script to setup Hugo
         run: |
-          cd module3_task2/
+          cd module3_task3/
           ./setup.sh
         shell: bash
 
       - name: Build and create package
         run: |
-          cd module3_task2/
+          cd module3_task3/
           make lint
 
       - name: Build and create package
         run: |
-          cd module3_task2/
+          cd module3_task3/
           make package
 
       - name: Run tests
         run: |
-          cd module3_task2/
+          cd module3_task3/
           make build
           make validate
           make integration-tests
@@ -46,4 +46,12 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: upload-package
-          path: module3_task2/awesome-website.zip
+          path: module3_task3/awesome-website.zip
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag-name: 1.0.0
+          files: |
+            module3_task3/awesome-website.zip
+            module3_task3/DEPLOY.md
