--- a/.github/workflows/module3_task3.yml
+++ b/.github/workflows/module3_task3.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          tag-name: 1.0.0
+          tag_name: 1.0.0
           files: |
             module3_task3/awesome-website.zip
             module3_task3/DEPLOY.md
