--- a/.github/workflows/module3_task4.yml
+++ b/.github/workflows/module3_task4.yml
@@ -7,9 +7,15 @@ on:
       - master
   schedule:
     - cron: "0 0 * * *"
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - edited
+      - ready_for_review
 
 jobs:
-  module3_task3:
+  module3_task4:
     runs-on: ubuntu-18.04
     steps:
       - name: Clone the repository
