Change formatting for pull_request

--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -7,10 +7,7 @@ on:
       - main
       - master
   pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
+    types: [opened, reopened, synchronize]
 
 permissions:
   contents: read
