--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -6,7 +6,10 @@ on:
     branches:
       - main
       - master
-  pull_request:
+  #  pull_request:
+  #    types: [opened, reopened, synchronize]
+
+  pull_request_target:
     types: [opened, reopened, synchronize]
 
 permissions:
