--- a/.github/workflows/release_drafter.yml
+++ b/.github/workflows/release_drafter.yml
@@ -6,10 +6,7 @@ on:
     branches:
       - main
       - master
-  #  pull_request:
-  #    types: [opened, reopened, synchronize]
-
-  pull_request_target:
+  pull_request:
     types: [opened, reopened, synchronize]
 
 permissions:
