Update files for task 1

--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -1,13 +1,18 @@
-build: ## Builds a website using hugo with current config in config.toml
-	@hugo
-	@touch awesome-api
+build-docker: ## Builds a docker image called awesome:build
+	@docker build -t awesome:build -f build/Dockerfile .
+
+build: ## Builds a website
+	@docker run awesome:build sh -c "hugo; ls ./dist/*"
 
 post: ## Creates a new post using env vars POST_TITLE and POST_NAME
 	@hugo new posts/$(POST_NAME).md
 	@sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
 
-clean: ## Removes content from dist directory
+clean:	## Removes all files from dist directory
 	@rm -rf dist/*
+
+docker-clean:	## Removes content from dist directory within docker container
+	@docker run awesome:build sh -c "hugo; make clean"
 
 package: ## Creates a zip file containing binary and the dist/ directory
 	@make build
@@ -26,9 +31,12 @@ integration-tests: ## Stats server and checks local host URL
 validate: ## Checks current working directory
 	@pwd
 
-lint: ## Lints markdown files
+lint:	## Lints markdown files
 	@markdownlint README.md DEPLOY.md
+
+docker-lint: ## Lints markdown files in docker
+	@docker run awesome:build sh -c "make lint"
 
 .SILENT:
 help: ## Displays helpful information for Makefile commands
-	@cat Makefile | grep '##' | tr -d '##' | head -n -1
+	@cat Makefile | grep '##' | tr -d '##' | head
