--- a/.github/workflows/module4_task1.yml
+++ b/.github/workflows/module4_task1.yml
@@ -2,9 +2,7 @@
 name: module4_task1
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [main, master]
   schedule:
     - cron: "0 0 * * *"
   pull_request:
@@ -14,37 +12,22 @@ jobs:
   module4_task1:
     runs-on: ubuntu-18.04
     steps:
-      - name: Clone the repository
+      - name: Clone and check out repository
         uses: actions/checkout@v3
 
-      - name: Run script to setup Hugo
+      - name: Docker run
         run: |
           cd module4_task1/
           ./setup.sh
-        shell: bash
-
-      - name: Build and create package
-        run: |
-          cd module4_task1/
+          make build-docker
           make lint
-
-      - name: Build and create package
-        run: |
-          cd module4_task1/
-          make package
-
-      - name: Run tests
-        run: |
-          cd module4_task1/
-          make build
-          make validate
-          make integration-tests
-          make unit-tests
-          make package
           make clean
-
-      - name: Archive build
-        if: ${{ success()}}
+          make build
+          make package
+          make unit-tests
+          make integration-tests
+      - name: Archive package
+        if: ${{ success() }}
         uses: actions/upload-artifact@v3
         with:
           name: upload-package
@@ -57,11 +40,10 @@ jobs:
           files: |
             module4_task1/awesome-website.zip
             module4_task1/DEPLOY.md
-
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.2
         with:
-          publish-dir: "module4_task1/dist"
+          publish-dir: "./module4_task1/dist"
           production-branch: master
           github-token: ${{ secrets.GITHUB_TOKEN }}
           deploy-message: "🎉 Published on   🚀 Deployed on"
