Made validate viable with docker

--- a/module4_task1/Makefile
+++ b/module4_task1/Makefile
@@ -31,7 +31,7 @@ integration-tests: ## Stats server and checks local host URL
 	@ls dist/
 
 validate: ## Checks current working directory
-	@pwd
+	@docker run awesome:build sh -c "pwd"
 
 lint:	## Lints markdown files
 	@markdownlint README.md DEPLOY.md
